--- a/index.html
+++ b/index.html
@@ -1,7 +1,36 @@
 <html>
   <head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="css/main.css" />
   </head>
   <body>
-    helelo~
+    <div class="container">
+	
+		<div class="header"><div class="header-box"><div class="up-header">&nbsp;</div><h1 class="header">银饰小站</h1></div></div>
+		<div class="background">
+			<div class="left">
+				<p>"Never increase, beyond what is necessary, the number of entities required to explain anything." William of Ockham (1285-1349)</p>
+			</div>
+			
+			<div class="right">
+				<h2>最近收录</h2>
+				<a href="html/silver/introduce.html">银简介</a>	<br/>
+				<a href="html/gold/introduce.html">金简介</a>	
+			</div>
+		</div>
+		
+		<div class="footer">Copyright 2014 by ifei3000.com.</div>
+	</div>
+
+    <script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	
+	  ga('create', 'UA-11621532-4', 'ifei3000.com');
+	  ga('send', 'pageview');
+
+	</script>
   </body>
 </html>
